src/app/shop/product-card/product-card.component.css
.card {
    background: white;
    border-color: white;
}
.card-img-top {
    max-height: 330px;
}
.card:hover {
    border: 1px solid #f72464;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #f72464;
}
.card-img-top, .card-title {
    cursor: pointer;
}

.card-text {
    cursor: default;
}

.card-title:hover {
    color: #f72464;
    border: none;
    outline: none;
}

h5 {
    font-size: 14pt;
    font: bold;
    font-family: 'Times New Roman', Times, serif;
    color: #222222;
    height: auto;
    text-align: center;
}

h6 {
    font: bold;
    color: #f72464;
    height: auto;
    text-align: center;
}

